--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
 
   <h2>Retrieve Your Club Membership ID</h2>
-  <p>Please enter your <strong>registered Email</strong> and <strong>Roll Number</strong>.</p>
+  <p>Please enter your <strong>Registered Email</strong> and <strong>Roll Number</strong>.</p>
 
   <input type="email" id="email" placeholder="Registered Email"><br>
   <input type="text" id="roll" placeholder="Roll Number"><br>
@@ -59,7 +59,7 @@
   <div id="resultBox"></div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbzFLfIyobHOJTmh9_yF073v476flRvYGXYoXVvzdAtCwFxhEZkzJe8la-oNU6rq8pxJkQ/exec";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzRWdFGE9ZnPrpoR1xoggdp6aO_uK84-mMbKCAqX0HBrBzGbqvFwT4ig4xVtMc7E7Ot/exec";
 
     function fetchMemberID() {
       const email = document.getElementById("email").value.trim();
